2011-01-20  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/README:
	Simplify ... permit only one test file as an argument, so that we can
	infer a single test directory easily (the directory containing the
	file) and thus use the standard code path in which we execute Start.sh
	and End.sh and run GNUmakefile.tests in the directory containing the
	file ... ie so that behavior when executing a single test file is
	identical to behavior when that file is executed as part of a whole
	testsuite.  Don't backup makefile when we create a new one.

2011-01-19  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	* TestFramework/README:
	* TestFramework/Testing.h:
	Add support for start and end scripts in each test directory.
	Fix bracketing in macro as suggested by Fred

2011-01-19  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	* TestFramework/Summary.sh:
	Portability fixes for systems where grep has limited functionality
	and/or where the shell's builtin 'test' command is limited/faulty.

2011-01-18  Richard Frith-Macdonald <rfm@gnu.org>

	* gnustep-config.in:
	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	* TestFramework/Summary.sh:
	Tweak use of grep for portability.  Try to locate gnu make reliably.

2011-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/example1.m:
	* TestFramework/example2.m:
	* TestFramework/example3.m:
	* TestFramework/example4.m:
	* TestFramework/example5.m:
	* TestFramework/example6.m:
	* TestFramework/example7.m:
	* TestFramework/example8.m:
	* TestFramework/GNUmakefile.in:
	* TestFramework/gnustep-tests:
	* TestFramework/README:
	* TestFramework/runtest.sh:
	* TestFramework/Summary.sh:
	* TestFramework/Testing.h:
	Further cleanups, corrections, simplifications, and documentation
	improvements.
	Added --failfast option to terminate a test run at the first failure.